--- a/mythemeBACKUP.css
+++ b/mythemeBACKUP.css
@@ -47,7 +47,7 @@
 	text-align: center;
 	width: 100%;
 	float: left;
-    left: 0%; /*15%*/
+    left: 15%;
     position:relative;
 }
 #sidebar {
@@ -61,8 +61,8 @@
 #content {
 	padding: 10 0 10 0;
 	float: left;
-	width: 100%; /*85%*/
-	right: 0%; /*15%*/
+	width: 85%;
+	right: 15%;
 	position: relative;
 }
 #content ul{
