--- a/mytheme.css
+++ b/mytheme.css
@@ -2,9 +2,9 @@
 # {}
 #heading {
 	text-align:center;
-	background-color: #776655;
+	background-color: #ffffff;
 	/* background-color: #000000; */
-	color: #ffffff;
+	color: #000000;
 }
 #nav {
 	text-align:center;
@@ -14,7 +14,7 @@
 	font-size: 16px;
 }
 #nav a{
-	color: #aaffaa;
+	color: #ffffff;
 	background-color: #000000;
 	text-decoration: none;
 }
